  * Removing unnecessary images
  * Fix bug on setting wallpaper
  ° Admin can add and manage shared links
  * Add an icon close on the tabs in the taskbar to remove the associated window
  * Add chistelised logo for administration
  * Compatibility IE8
  * Weight reduction pictures
  * Admin can add shared links
  * Fix bug if accueil.php is the home page

 -- Dominique Lepaisant <dlepaisant@ac-caen.fr>  Fri, 24 Sep 2010 09:08:08 +0200

lcs-desktop (0.2~18) Lcs; urgency=low

  * Fix bug on charset in notification of forum
  * Add wallpapers
  * Delete inc-form_user_prefs.php
  * rename delette_xml.php to delete_xml.php
  * Added the choice of the size of window opening them in the user prefs
  * Fix bug with js intrusions in Gepi
  * Correction of title tags and meta tags in index.php. Filled with the parameters of the establishment
  * Add new wallpaper and modify default wallpaper

 -- Dominique Lepaisant <dlepaisant@ac-caen.fr>  Mon, 20 Sep 2010 21:09:30 +0200

lcs-desktop (0.2~17) Lcs; urgency=low

  * Fixed bug on the registration of preferences 

 -- Dominique Lepaisant <dlepaisant@ac-caen.fr>  Thu, 23 Sep 2010 13:21:22 +0200

lcs-desktop (0.2~16) Lcs; urgency=low

  * Bug fix on retrieving preferences

 -- Dominique Lepaisant <dlepaisant@ac-caen.fr>  Sun, 26 Nov 2010 19:05:20 +0200

lcs-desktop (0.2~15) Lcs; urgency=low

  * Fix bug with the default display
  * Fix bug on inc-menus_admin.php links
  * Removing target _top in applications (force open a window in the desktop)
  * Fix bug IE8 (offline, unauthenticated)

 -- Dominique Lepaisant <dlepaisant@ac-caen.fr>  Wed, 22 Sep 2010 13:04:27 +0200

lcs-desktop (0.2~14) Lcs; urgency=low

  * Fix bug on the call of the finder (prefs)
  * Added forgotten files
  * Added save_prefs.php
  * Changing the display of the current date.
  * Amendment of window management. The windows are no longer assigned to an application. Each link opens a new window if not already open.